create reviews, navbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.extra_container{
+    width: 50%;
+}
+
+.extra_container div{
+    padding: 5px;
+}
