--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-navbar></app-navbar>
-
-<app-home></app-home>
-
-<app-reviews></app-reviews>
+<router-outlet></router-outlet>
 
 <div class="footer">
   <!-- Footer content goes here -->
