--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<!-- Add content for Home Page - Image and Book Now -->
+<!-- home.component.html -->
+
+<div class="welcome-container">
+    <h2>{{ welcomeMessage }}</h2>
+    <!-- Other content goes here -->
+  </div>
+  
