Update Home page - Add footer and cards

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,11 @@
-<!-- Add content for Home Page - Image and Book Now -->
+<div class="card">
+    <img src="src\assets\home-images\home_book_now_card_3.jpg" alt="Book Now" class="card-image">
+    <div class="card-content">
+        <h3 class="card-title">BOOK NOW</h3>
+        <p class="card-description">
+            Book our services in just 60 seconds
+        </p>
+      <button class="btn" (click)="bookNow()">Book Now</button>
+    </div>
+</div>
+  
