--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -1,9 +1,10 @@
-<div class="container extra_container">
+<div class="card">
   <div class="row">
     <h3 class="md-col-12">Add Reviews</h3>
   </div>
 
   <form [formGroup]="angForm" (ngSubmit)="postData(angForm)" autocomplete="off">
+    <!-- Existing add reviews form code -->
     <div class="row">
       <div class="col-md-6">Service Name</div>
       <div class="col-md-6">
