--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,5 +4,6 @@
   <div class="spacer"></div>
   <a mat-button>Home</a>
   <a mat-button>Services</a>
+  <a routerLink="/book-now" mat-button>Book Now</a>
   <a mat-raised-button color="accent">Sign Up</a>
 </mat-toolbar>
