--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,4 @@
 
 <app-reviews></app-reviews>
 
-<div class="footer">
-  <!-- Footer content goes here -->
-  <p>&copy; 2024</p>
-</div>
+<app-footer></app-footer>
