--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
   <div class="spacer"></div>
   <a mat-button>Home</a>
-  <a mat-button>Services</a>
+  <a mat-button>Services & Prices</a>
   <a routerLink="/book-now" mat-button>Book Now</a>
   <a mat-raised-button color="accent">Sign Up</a>
 </mat-toolbar>
