add temp images

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <div class="footer-content">
         <!-- Company Logo -->
         <div class="logo">
-          <img src="assets/logo.png" alt="Logo">
+          <img src="assets/home-images/cleaning_services_logo.jpg" alt="Logo">
         </div>
   
         <!-- Contact Details -->
