--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <img src="src\assets\home-images\home_book_now_card_3.jpg" alt="Book Now" class="card-image">
+    <img src="assets/home-images/home_book_now_card_3.jpg" alt="Book Now" class="card-image">
     <div class="card-content">
         <h3 class="card-title">BOOK NOW</h3>
         <p class="card-description">
