--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -47,4 +47,21 @@
       </div>
     </div>
   </form>
+
+  <!-- Horizontal Line -->
+  <div class="horizontal-line"></div>
+
+  <!-- List of past reviews below: -->
+  <!-- List of past reviews below -->
+  <div *ngIf="reviews.length > 0">
+    <h4>Past Reviews</h4>
+    <ul>
+      <li *ngFor="let review of reviews">
+        <strong>Service:</strong> {{ review.service }} |
+        <strong>Price:</strong> {{ review.price | currency: 'USD' }} |
+        <strong>Description:</strong> {{ review.description }}
+      </li>
+    </ul>
+  </div>
+
 </div>
