--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -15,3 +15,11 @@
     border-radius: 4px;
     cursor: pointer;
   }
+
+.horizontal-line {
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #3498db, #6fa1d6, #3498db);
+  margin: 20px 0;
+  border: none;
+}
