--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
         <!-- Contact Details -->
         <div class="contact-details">
           <p>Contact Us:</p>
-          <p>Email: info@cleaningservices.com</p>
+          <p>Email: info@luxecleanservices.com</p>
           <p>Phone: +1 (123) 456-7890</p>
         </div>
   
