--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>Lex Clean Services</span>
+  <span>LuxeClean Services</span>
 
   <div class="spacer"></div>
   <a mat-button routerLink="/">Home</a>
