--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
   <div class="spacer"></div>
   <a mat-button routerLink="/">Home</a>
-  <a mat-button>Services & Prices</a>
+  <a mat-button routerLink="/service">Services & Prices</a>
   <a mat-button routerLink="/book-now">Book Now</a>
   <a mat-raised-button color="accent">Sign Up</a>
 </mat-toolbar>
