create service page

--- a/src/app/components/book-now/book-now.component.html
+++ b/src/app/components/book-now/book-now.component.html
@@ -17,10 +17,15 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-top: 5px;">
-              <option value="none" selected>service1</option>
-              <option value="male">service2</option>
-              <option value="female">service3</option>
-              <option value="other">service4</option>
+              <option value="Standard" selected>Standard Cleaning Package</option>
+              <option value="Signature">Signature Cleaning Package</option>
+              <option value="Platinum">Platinum Cleaning Package</option>
+              <option value="Laundry">Laundry</option>
+              <option value="Fridge">Fridge Interior Clean</option>
+              <option value="Window">Window Sill Cleaning</option>
+              <option value="Pantry">Pantry Organization</option>
+              <option value="Closet">Closet Organization</option>
+              <option value="Vents">Vents Cleaning</option>
             </select>
       </div>
   
