--- a/src/app/components/service/platinum/platinum.component.html
+++ b/src/app/components/service/platinum/platinum.component.html
@@ -122,7 +122,7 @@
         <div class="column">
             <div class="section">
                 <div class="text">
-                    <p class="highlight">Vents Cleaned:</p>
+                    <p class="highlight">Vents Cleaning:</p>
                     <ul>
                         <li><span class="sub-highlight">Air Quality Enhancement:</span> Thorough cleaning of air vents and exhausts for improved indoor air quality.</li>
                         <li><span class="sub-highlight">Vent Interior Washing:</span> Detailed washing of interior areas to remove dust and debris.</li>
