--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -218,7 +218,7 @@
         <div class="card">
             <img src="assets/home-images/vents_cleaning.jpg" alt="Book Now" class="card-image">
             <div class="card-content">
-                <h3 class="card-title">Vents Cleaned</h3>
+                <h3 class="card-title">Vents Cleaning</h3>
                 <p class="card-description">
                     $37
                 </p>
