--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,6 +12,15 @@
           <p>Email: info@luxecleanservices.com</p>
           <p>Phone: +1 (123) 456-7890</p>
         </div>
+
+        <div class="quick-links">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/services">Services & Prices</a></li>
+            <li><a routerLink="/book-now">Book Now</a></li>
+          </ul>
+        </div>
   
         <!-- Link to "BOOK NOW" form page -->
         <div class="book-now-link">
