--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -37,4 +37,17 @@
     background-color: #fff;
     color: #3498db;
   }
+
+  .quick-links li {
+    margin-bottom: 5px;
+  }
+  
+  .quick-links a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .quick-links a:hover {
+    text-decoration: underline;
+  }
   
