--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,20 @@
 <div class="card">
     <img src="assets/home-images/home_book_now_card_3.jpg" alt="Book Now" class="card-image">
     <div class="card-content">
-        <h3 class="card-title">BOOK NOW</h3>
+        <h3 class="card-title">
+            LuxeClean Services
+        </h3>
         <p class="card-description">
-            Book our services in just 60 seconds
+            We're the best at what we do!
         </p>
-      <button class="btn" routerLink="/book-now" (click)="bookNow()">Book Now</button>
+        <h4 class="card-description">
+            Book our services in just 60 seconds.
+        </h4>
+      <button class="btn" routerLink="/book-now">Book Now</button>
     </div>
 </div>
+
+<app-faq></app-faq>
 
 <app-reviews></app-reviews>
   
