--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -1,25 +1,41 @@
 .card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 16px;
-    padding: 16px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-.btn {
-    background-color: #3498db;
-    color: #fff;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+.mat-toolbar {
+  background-color: #3498db;
+  color: #fff;
+  border-radius: 8px 8px 0 0;
+}
 
-.horizontal-line {
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(to right, #3498db, #6fa1d6, #3498db);
-  margin: 20px 0;
-  border: none;
+.card-content {
+  padding: 16px;
+}
+
+.customer-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.customer-name {
+  font-weight: bold;
+  margin: 0;
+}
+
+.review {
+  margin: 7px;
+}
+
+.review-date {
+  color: #555;
+  margin: 0;
+}
+
+.customer-feedback {
+  margin: 0;
 }
