updated some minute UI changes

--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-6 offset-md-3">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <label class="input-group-text" for="areaFilter">Filter by Area:</label>
+            <label class="input-group-text" for="areaFilter">Select by Area:</label>
           </div>
           <select class="custom-select" id="areaFilter" (change)="applyAreaFilter($event)">
             <option value="all">All</option>
